--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <i class='bx bx-search-alt-2 bx-sm search-glass'></i>
                     <input type="text" id="search-input" placeholder="Search For Country">
                 </div>
-                <select id="select-region" name="">
+                <select id="select-region">
                     <option value="Default" disabled selected hidden>Find By Region</option>
                     <option class="region-name" value="All">All</option>
                     <option class="region-name" value="Africa">Africa</option>
@@ -50,7 +50,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>Produzido por: <a href="https://github.com/hugocicillini" target="_blank">hugocicillini</a></p>
+        <p>Produzido por: <a href="https://github.com/hugocicillini" target="_blank" alt="developer">hugocicillini</a></p>
     </footer>
 </body>
 
