--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </section>
     </main>
     <footer class="footer">
-        <p>Produzido por: <a href="https://github.com/hugocicillini" target="_blank" alt="developer">hugocicillini</a></p>
+        <p>Produzido por: <a href="https://github.com/hugocicillini" target="_blank" alt="developer">hugocicillini</a>
+        </p>
     </footer>
 </body>
 
